--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mQD-dW-LLM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mQD-dW-LLM">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -844,48 +844,28 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qbn-jf-Qlk">
-                                <rect key="frame" x="20" y="170" width="728" height="834"/>
+                                <rect key="frame" x="20" y="130" width="728" height="874"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="2rl-OZ-ahJ" customClass="UserTableViewCell" customModule="Pictation" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="728" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" semanticContentAttribute="forceLeftToRight" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2rl-OZ-ahJ" id="t34-df-dH8" customClass="UserTableViewCell" customModule="Pictation" customModuleProvider="target">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2rl-OZ-ahJ" id="t34-df-dH8" customClass="UserTableViewCell" customModule="Pictation" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="728" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <button opaque="NO" userInteractionEnabled="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YbZ-wB-TDL">
-                                                    <rect key="frame" x="211" y="12" width="306" height="65.5"/>
-                                                    <state key="normal">
-                                                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="nosemaj7:" destination="7df-Me-wEI" eventType="touchUpInside" id="Aem-jG-83J"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="YbZ-wB-TDL" secondAttribute="trailing" constant="211" id="3o1-vd-RFC"/>
-                                                <constraint firstItem="YbZ-wB-TDL" firstAttribute="top" secondItem="t34-df-dH8" secondAttribute="top" constant="12" id="Vp7-Vo-uRm"/>
-                                                <constraint firstAttribute="bottom" secondItem="YbZ-wB-TDL" secondAttribute="bottom" constant="12" id="jxR-KU-t3J"/>
-                                                <constraint firstItem="YbZ-wB-TDL" firstAttribute="leading" secondItem="t34-df-dH8" secondAttribute="leading" constant="211" id="r4X-w2-7PK"/>
-                                            </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="buttonCell" destination="YbZ-wB-TDL" id="8ag-OE-Q23"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Qbn-jf-Qlk" firstAttribute="leading" secondItem="IZj-0r-ZJJ" secondAttribute="leading" constant="20" id="0w1-fb-ly2"/>
                             <constraint firstItem="IZj-0r-ZJJ" firstAttribute="trailing" secondItem="Jei-LM-tpz" secondAttribute="trailing" constant="20" id="E4r-0x-zfI"/>
-                            <constraint firstItem="Qbn-jf-Qlk" firstAttribute="leading" secondItem="IZj-0r-ZJJ" secondAttribute="leading" constant="20" id="El7-Dr-1tU"/>
-                            <constraint firstItem="Qbn-jf-Qlk" firstAttribute="top" secondItem="Jei-LM-tpz" secondAttribute="bottom" constant="40" id="L1P-5a-YAY"/>
+                            <constraint firstItem="IZj-0r-ZJJ" firstAttribute="bottom" secondItem="Qbn-jf-Qlk" secondAttribute="bottom" constant="20" id="S4v-e1-fsf"/>
+                            <constraint firstItem="Qbn-jf-Qlk" firstAttribute="top" secondItem="Jei-LM-tpz" secondAttribute="bottom" id="W4i-sx-7bU"/>
                             <constraint firstItem="Jei-LM-tpz" firstAttribute="top" secondItem="IZj-0r-ZJJ" secondAttribute="top" constant="20" id="e7s-SS-NXP"/>
-                            <constraint firstItem="IZj-0r-ZJJ" firstAttribute="trailing" secondItem="Qbn-jf-Qlk" secondAttribute="trailing" constant="20" id="keM-Z8-nUR"/>
-                            <constraint firstItem="IZj-0r-ZJJ" firstAttribute="bottom" secondItem="Qbn-jf-Qlk" secondAttribute="bottom" constant="20" id="uAc-le-Cha"/>
+                            <constraint firstItem="IZj-0r-ZJJ" firstAttribute="trailing" secondItem="Qbn-jf-Qlk" secondAttribute="trailing" constant="20" id="srO-4J-u4H"/>
                             <constraint firstItem="Jei-LM-tpz" firstAttribute="leading" secondItem="IZj-0r-ZJJ" secondAttribute="leading" constant="20" id="z9C-VT-alA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IZj-0r-ZJJ"/>
@@ -901,7 +881,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fQo-Yn-Gsu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="7df-Me-wEI" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="962.5" y="-513.28125"/>
         </scene>
@@ -1337,10 +1316,10 @@
         <image name="undo" width="100" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1vI-ev-IrH"/>
+        <segue reference="arg-PJ-QV9"/>
         <segue reference="xxE-eh-9xa"/>
-        <segue reference="hbu-cj-QHu"/>
-        <segue reference="2U3-2p-Ijy"/>
-        <segue reference="rv6-lD-qnG"/>
+        <segue reference="aVe-0C-psZ"/>
+        <segue reference="qUM-3B-JQM"/>
+        <segue reference="uai-St-tLF"/>
     </inferredMetricsTieBreakers>
 </document>
