--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mQD-dW-LLM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mQD-dW-LLM">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -116,17 +116,17 @@
                                 <rect key="frame" x="0.0" y="524" width="768" height="500"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oM7-3p-wGo">
-                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="itemSize" width="100" height="126"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="j4D-75-9QG" customClass="myCell" customModule="Pictation" customModuleProvider="target">
-                                        <rect key="frame" x="15" y="15" width="100" height="100"/>
+                                        <rect key="frame" x="15" y="15" width="100" height="126"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="126"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCr-Hb-8bx">
@@ -135,20 +135,28 @@
                                                         <action selector="cellButtonHandler:" destination="j4D-75-9QG" eventType="touchUpInside" id="qSh-fg-NnT"/>
                                                     </connections>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8X-KW-jM3">
+                                                    <rect key="frame" x="2" y="96" width="96" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="tCr-Hb-8bx" secondAttribute="bottom" constant="2" id="9JH-7W-xvs"/>
+                                            <constraint firstAttribute="bottom" secondItem="tCr-Hb-8bx" secondAttribute="bottom" constant="28" id="9JH-7W-xvs"/>
                                             <constraint firstItem="tCr-Hb-8bx" firstAttribute="top" secondItem="j4D-75-9QG" secondAttribute="top" constant="2" id="NN2-wk-DZR"/>
                                             <constraint firstAttribute="trailing" secondItem="tCr-Hb-8bx" secondAttribute="trailing" constant="2" id="NSj-zh-BqF"/>
                                             <constraint firstAttribute="trailing" secondItem="tCr-Hb-8bx" secondAttribute="trailing" constant="2" id="bKp-MH-qKw"/>
                                             <constraint firstItem="tCr-Hb-8bx" firstAttribute="leading" secondItem="j4D-75-9QG" secondAttribute="leading" constant="2" id="dPA-bS-n08"/>
                                             <constraint firstItem="tCr-Hb-8bx" firstAttribute="top" secondItem="j4D-75-9QG" secondAttribute="top" constant="2" id="eqN-RI-HOo"/>
-                                            <constraint firstAttribute="bottom" secondItem="tCr-Hb-8bx" secondAttribute="bottom" constant="2" id="ixO-1u-ich"/>
+                                            <constraint firstAttribute="bottom" secondItem="tCr-Hb-8bx" secondAttribute="bottom" constant="28" id="ixO-1u-ich"/>
                                             <constraint firstItem="tCr-Hb-8bx" firstAttribute="leading" secondItem="j4D-75-9QG" secondAttribute="leading" constant="2" id="nYz-eh-DTR"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="buttonCell" destination="tCr-Hb-8bx" id="f2l-WP-5Fm"/>
+                                            <outlet property="cellName" destination="R8X-KW-jM3" id="fLi-z5-KFp"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -212,7 +220,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OSN-Rl-W11" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1986" y="376"/>
+            <point key="canvasLocation" x="1985.9375" y="375.5859375"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="yz6-Xg-6dH">
@@ -364,17 +372,17 @@
                                 <rect key="frame" x="0.0" y="524" width="768" height="500"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="0ou-NX-zRl">
-                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="itemSize" width="100" height="126"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="68T-o1-E8g" customClass="myCell" customModule="Pictation" customModuleProvider="target">
-                                        <rect key="frame" x="15" y="15" width="100" height="100"/>
+                                        <rect key="frame" x="15" y="15" width="100" height="126"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="126"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAY-Xp-BR2">
@@ -383,16 +391,24 @@
                                                         <action selector="cellButtonHandler:" destination="68T-o1-E8g" eventType="touchUpInside" id="HxF-rA-EVc"/>
                                                     </connections>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mzr-gM-B8a">
+                                                    <rect key="frame" x="2" y="96" width="96" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </view>
                                         <constraints>
                                             <constraint firstItem="ZAY-Xp-BR2" firstAttribute="leading" secondItem="68T-o1-E8g" secondAttribute="leading" constant="2" id="H8k-vi-ceV"/>
                                             <constraint firstItem="ZAY-Xp-BR2" firstAttribute="top" secondItem="68T-o1-E8g" secondAttribute="top" constant="2" id="QFz-42-n2e"/>
-                                            <constraint firstAttribute="bottom" secondItem="ZAY-Xp-BR2" secondAttribute="bottom" constant="2" id="oAS-g5-azY"/>
+                                            <constraint firstAttribute="bottom" secondItem="ZAY-Xp-BR2" secondAttribute="bottom" constant="28" id="oAS-g5-azY"/>
                                             <constraint firstAttribute="trailing" secondItem="ZAY-Xp-BR2" secondAttribute="trailing" constant="2" id="zfo-P8-dEl"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="buttonCell" destination="ZAY-Xp-BR2" id="glz-G4-QmY"/>
+                                            <outlet property="cellNameIntermediate" destination="mzr-gM-B8a" id="NSE-Tx-fjE"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -465,7 +481,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="59z-0j-we9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1174" y="376"/>
+            <point key="canvasLocation" x="1173.4375" y="375.5859375"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="oEz-dm-PT1">
@@ -1161,17 +1177,17 @@
                                 <rect key="frame" x="0.0" y="524" width="768" height="500"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="Yyw-xo-hDh">
-                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="itemSize" width="100" height="126"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="vzq-6W-VDY" customClass="myCell" customModule="Pictation" customModuleProvider="target">
-                                        <rect key="frame" x="15" y="15" width="100" height="100"/>
+                                        <rect key="frame" x="15" y="15" width="100" height="126"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="126"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2e-2l-lKp">
@@ -1180,16 +1196,24 @@
                                                         <action selector="cellButtonHandler:" destination="vzq-6W-VDY" eventType="touchUpInside" id="oJw-GQ-4w7"/>
                                                     </connections>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JkI-wW-rER">
+                                                    <rect key="frame" x="2" y="96" width="96" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </view>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="d2e-2l-lKp" secondAttribute="trailing" constant="2" id="GVr-MT-q9l"/>
-                                            <constraint firstAttribute="bottom" secondItem="d2e-2l-lKp" secondAttribute="bottom" constant="2" id="Mlb-q2-3b0"/>
+                                            <constraint firstAttribute="bottom" secondItem="d2e-2l-lKp" secondAttribute="bottom" constant="28" id="Mlb-q2-3b0"/>
                                             <constraint firstItem="d2e-2l-lKp" firstAttribute="top" secondItem="vzq-6W-VDY" secondAttribute="top" constant="2" id="Yn6-aF-V1J"/>
                                             <constraint firstItem="d2e-2l-lKp" firstAttribute="leading" secondItem="vzq-6W-VDY" secondAttribute="leading" constant="2" id="gLb-kU-QBb"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="buttonCell" destination="d2e-2l-lKp" id="ZwW-7i-3me"/>
+                                            <outlet property="cellNameAdvanced" destination="JkI-wW-rER" id="eQr-8S-1VH"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -1315,7 +1339,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="arg-PJ-QV9"/>
         <segue reference="xxE-eh-9xa"/>
-        <segue reference="hbu-cj-QHu"/>
+        <segue reference="LBc-jJ-fQO"/>
         <segue reference="qUM-3B-JQM"/>
         <segue reference="uai-St-tLF"/>
     </inferredMetricsTieBreakers>
